# Insight

./: .gitignore  Cargo.toml  README.md  block.py  db.rs  main.py  notes.txt  optimizations  requirements.txt  todo
.cargo/: config.toml
assets/mixamo/: .ninja_tpose.glb.icloud  .shoot.glb.icloud
assets/mixamo/old/: .back.glb.icloud  .left.glb.icloud  .right_crouch.glb.icloud
assets/nature/parasol/: .scene.bin.icloud
components/: Cargo.toml
components/src/: lib.rs  struc.rs  todo
components/src/game/: conf.rs  levelgen.rs  mod.rs  network.rs  player.rs  rapier.txt  simulation.rs  todo
database/: 000014.sst  000019.sst  000030.sst  000036.sst  000052.sst  000080.sst  000106.sst  049331.sst  049566.sst  049598.sst  049602.sst  CURRENT  IDENTITY  LOG  LOG.old.1655407644665714  LOG.old.1655407644765377  LOG.old.1655407644865302  LOG.old.1655407644969749  LOG.old.1655407645071006  LOG.old.1655407645219292  LOG.old.1655407645268296  LOG.old.1655407645316711  LOG.old.1655407645366710  LOG.old.1655407645573543  LOG.old.1655407645673318  LOG.old.1655407645818934  LOG.old.1655407645924752  LOG.old.1655407645974905  LOG.old.1655407646024405  LOG.old.1655407646124454  LOG.old.1655407646221414  LOG.old.1655407646317907  LOG.old.1655407646367242  LOG.old.1655407646467859  LOG.old.1655407646769870  LOG.old.1655407646819433  LOG.old.1655407646871648  LOG.old.1655407646924007  LOG.old.1655407647022168  LOG.old.1655407647071269  (+549 more)
db/: 000005.ldb  000008.ldb  000011.ldb  000016.ldb  000019.ldb  000031.ldb  000040.ldb  000042.ldb  LOG  LOG 3  LOG.old  MANIFEST-000010  MANIFEST-000018  MANIFEST-000041  MANIFEST-000046  db.rs
env/Scripts/: activate  activate.bat
game/: Cargo.toml  player.rs
game/src/: lib.rs  notes.txt  struc.rs
game/src/insight/: conf.rs  level.rs  levelgen.rs  player.rs  simulation.rs
game/src/subapps/: renderer.rs
game_components/: Cargo.toml
game_components/src/: peers.rs  struc.rs  todo
game_components/src/game/: conf.rs  level.rs  mod.rs  simulation.rs
launch/: Cargo.toml
launch/database/: 049237.sst  049323.sst  049484.sst  049495.sst  049499.sst  CURRENT  IDENTITY  LOG  LOG.old.1655407643822341  LOG.old.1655407643872292  LOG.old.1655407643921144  LOG.old.1655407643970263  LOG.old.1655407644019593  LOG.old.1655407644068281  LOG.old.1655407644116589  LOG.old.1655407644167882  LOG.old.1655407644216018  LOG.old.1655407644265464  LOG.old.1655407644313954  LOG.old.1655407644368858  LOG.old.1655407644450316  LOG.old.1655407644512217  LOG.old.1655407644566283  LOG.old.1655407644617436  LOG.old.1655407644715232  LOG.old.1655407644813808  LOG.old.1655407644914831  LOG.old.1655407645021775  LOG.old.1655407645120660  LOG.old.1655407645169826  LOG.old.1655407645425206  LOG.old.1655407645474392  LOG.old.1655407645525266  LOG.old.1655407645623704  LOG.old.1655407645721901  LOG.old.1655407645769993  LOG.old.1655407645868344  LOG.old.1655407646072469  LOG.old.1655407646172751  LOG.old.1655407646269935  (+451 more)
launch/src/: game.rs  main.rs  todo.txt
launch/src/game/: conf.rs  constants.rs  level.rs  levelgen.rs  player.rs  simulation.rs  todo.txt
launch/src/networks/: const.rs
launch/src/validation/: validation.rs
networks/: todo.txt
src/: blockchain.rs  main.rs  networks.rs  subapps.rs  todo.txt
src/blockchain/: block.rs  mod.rs  notes  struc.rs  todo  transactions.rs
src/db/: db.rs  todo 2  todo.txt
src/game/: collisions.rs  conf.rs  level.rs  levelgen.rs  notes.txt  planebuild.txt  player.rs  simulation.rs  todo
src/game_world/: mod.rs
src/game_world/ggrs_rollback/: mod.rs  network.rs  notes.txt  simulation.rs  validation.rs
src/game_world/players/: display.rs  fight.rs  info.rs  interact.rs  movement.rs  physics.rs
src/networks/: client.rs  events.rs  input.rs  mod.rs  nmain.rs  notes  notes.txt  protocol.rs  todo  todo.txt  transport.rs  util.rs  validate.rs  webrtc.rs  zgossipsub.rs  zkademlia.rs  zrequest.rs
src/networks/db/: db.rs
src/subapps/: default_plane.rs  renderer.rs
src/validation/: validation.rs
src/wallet/: keys.rs  mod.rs  todo  transact.rs
util/: db.py  hex_to_binary.py
util/leveldb_py/: setup.py
validation/: todo.txt
(+21 files in other folders)
