[package]
name = "launch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_rapier2d = { version = "0.14.0", features = [ "enhanced-determinism" ]}
rand = { version = "0.8.5", features = ["small_rng"] }
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rocksdb = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.31", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"